# avro-simple

./: CHANGELOG.md  README.md  avro-simple.cabal
.github/workflows/: haskell.yml
benchmarks/: bench.hs
src/: Avro.hs
src/Avro/: Codec.hs  Name.hs  Schema.hs  Value.hs
src/Avro/Internal/: Bytes.hs  DList.hs  Deconflict.hs  Overlay.hs  ReadSchema.hs  VarInt.hs  ZigZag.hs
test/: Main.hs
test/Test/Avro/: Binary.hs  Names.hs
test/Test/Avro/Codec/: Basics.hs  Compound.hs  Recursive.hs
test/Test/Avro/Resolutions/: Base.hs  Basics.hs  Enumerations.hs  Unions.hs
test/Test/Avro/Schema/: Canonical.hs  Roundtrip.hs  Validation.hs
