cabal-version:      1.24
name:               avro-simple
version:            0.1.0.0
homepage:           icicle-lang.github.io
license:            AllRightsReserved
author:             Huw Campbell
maintainer:         huw.campbell@gmail.com
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:
        Avro
        Avro.Codec
        Avro.Schema
        Avro.Name
        Avro.Value

    other-modules:
        Avro.Internal.Bytes
        Avro.Internal.Deconflict
        Avro.Internal.DList
        Avro.Internal.ReadSchema
        Avro.Internal.Overlay
        Avro.Internal.VarInt
        Avro.Internal.ZigZag

    build-depends:
        base >= 4.11 && < 5,
        aeson,
        binary,
        bytestring,
        containers,
        invariant,
        profunctors,
        scientific,
        text,
        transformers,
        unordered-containers,
        vector

    hs-source-dirs:   src
    default-language: Haskell98
    ghc-options: -Wall

test-suite avro-simple-test
    default-language: Haskell98
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    other-modules:
        Test.Avro.Codec.Basics
        Test.Avro.Codec.Compound
        Test.Avro.Codec.Recursive
        Test.Avro.Schema.Roundtrip
        Test.Avro.Schema.Validation
        Test.Avro.Resolutions.Base
        Test.Avro.Resolutions.Basics
        Test.Avro.Resolutions.Unions

    build-depends:
        base >= 4.11 && < 5,
        avro-simple,
        aeson,
        binary,
        containers,
        invariant,
        neat-interpolation,
        profunctors,
        text,
        hedgehog

    ghc-options: -Wall


benchmark bench
    type:
        exitcode-stdio-1.0

    hs-source-dirs:
        benchmarks

    default-language:
        Haskell2010

    main-is:
        bench.hs

    ghc-options:
        -Wall -O2

    build-depends:
        base,
        avro-simple,
        binary,
        cereal,
        deepseq,
        gauge,
        text
